--- a/demo.md.html
+++ b/demo.md.html
@@ -243,7 +243,7 @@ cgenExpr l (K.TElemR e1 e2 ty) = do
 ```
 [Listing [hask]: An out-of context piece of Haskell code.]
 
-It's possible to reference listings: Consider listing [hask].
+It's possible to reference listings: Consider Listing [hask].
 
 ---
 
