Use markdeep-relative-sizes

--- a/demo.md.html
+++ b/demo.md.html
@@ -301,6 +301,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
         modeChangeHook: (newMode) => {}
     };
 </script>
+<link rel="stylesheet" href="markdeep-slides/lib/markdeep-relative-sizes/1.07/relativize.css">
 <link rel="stylesheet" href="markdeep-slides/markdeep-slides.css">
 <script src="markdeep-slides/markdeep-slides.js"></script>
 
