Fix typo on demo slides

--- a/demo.md.html
+++ b/demo.md.html
@@ -92,7 +92,7 @@ In draft mode, presenter notes are shown below each slide.
 
 You can **export a PDF version** of your slides by simply **printing it to a PDF file** using your browser's built-in tools.
 
-In my experience, this **works best in Chrome** as it respect the `@page` CSS selector properly.
+In my experience, this **works best in Chrome** as it respects the `@page` CSS selector properly.
 
 !!!
     In the print modal, set "Margins" to "None" and make sure to keep the "Background graphics" option enabled.
